# cllg-prooject

./: api.ts  bun.lockb  globals.css  package-lock.json  package.json  tsconfig.json
suitcase-api/: Dockerfile  README.md  docker-compose.yml  prometheus.yml  pyproject.toml  requirements.txt
suitcase-api/app/: main.py  scrape.py  scraper.py
suitcase-api/app/api/: chat.py  document.py  health.py
suitcase-api/app/core/: config.py  supertokens_config.py
suitcase-api/app/db/: base.py  postgres.py
suitcase-api/app/models/: chat.py  document.py
suitcase-api/app/services/: chat_service.py  document_service.py  summarization_service.py
suitcase-api/app/utils/: file_processor.py
